file(GLOB SRCS *.cpp)
set(TARGET Editor_lib)
add_library(${TARGET} OBJECT ${SRCS})
target_link_libraries(${TARGET} PUBLIC imgui glfw glad)
if (MINGW)
    target_link_libraries(${TARGET} PUBLIC Runtime_lib)
elseif(MSVC)
    target_link_libraries(${TARGET} PUBLIC ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/${BUILD_SUB_DIR}/Runtime_lib.lib)
    add_dependencies(${TARGET} Runtime_lib)
endif()
# if (SRC_DEBUG_MODE)
#     set_target_properties(${TARGET} PROPERTIES COMPILE_FLAGS "-g -O0")
# endif()