file(GLOB SRCS *.cpp)
set(TARGET Runtime_lib)
add_subdirectory(Scene)
add_library(${TARGET} STATIC ${SRCS})
if (MINGW)
    target_link_libraries(${TARGET} PUBLIC Scene_lib)
elseif(MSVC)
    target_link_libraries(${TARGET} PUBLIC ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/${BUILD_SUB_DIR}/Scene_lib.lib)
    add_dependencies(${TARGET} Scene_lib)
endif()