file(GLOB SRCS *.cpp)
set(TARGET glWrapper_lib)
add_library(${TARGET} SHARED ${SRCS})
if (MINGW)
    target_link_libraries(${TARGET} PUBLIC glad stb)
elseif(MSVC)
    target_link_libraries(${TARGET} PUBLIC ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/${BUILD_SUB_DIR}/glad.lib ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/${BUILD_SUB_DIR}/stb.lib)
    add_dependencies(${TARGET} glad stb)
endif()
# if (SRC_DEBUG_MODE)
#     set_target_properties(${TARGET} PROPERTIES COMPILE_FLAGS "-g -O0")
# endif()